--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,22 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
-    const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600))
-
-    console.table(fifteen);
+    const bornInFifteen = inventors.filter(inventor => {
+      return (inventor.year >= 1500 && inventor.year <1600)
+    });
+    // console.table(bornInFifteen);
+    
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
-    const inventorName = inventors.map(inventor => inventor.first + ` ` + inventor.last)
-    console.log(inventorName);
+    const fullNames = inventors.map()
+
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-    const ordered = inventors.sort(function(a,b) {
-      if(a.year > b.year){
-        return 1;
-      } else {
-        return -1;
-      }
-    });
 
-    console.table(ordered);
+
 
 
     // Array.prototype.reduce()
