--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -56,16 +56,36 @@
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    const order = inventors.sort((a, b) => a.year - b.year);
+
+    console.log(order);
+
 
 
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+     
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+    // console.log(totalYears);
+
+
+
+
     // 5. Sort the inventors by years lived
+
+
+    const yearsOrder = inventors.sort((a, b) => (a.passed - a.year) - (b.passed-b.year));
+
+    console.log(yearsOrder);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+
 
 
     // 7. sort Exercise
